# cocoa

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c  vcpkg.json
cmake/: copy_dlls.cmake
content/: object.vert
src/: int_types.h  main.c
src/game/: game.c  game.h
src/graphics/: buffer.c  buffer.h  device.c  device.h  formats.c  formats.h  geometry.c  geometry.h  pipeline.c  pipeline.h  pipeline_layout.c  pipeline_layout.h  renderer.c  renderer.h  shader.c  shader.h  swapchain.c  swapchain.h
